--- a/pom.xml
+++ b/pom.xml
@@ -8,11 +8,11 @@
         <version>1.5.20.RELEASE</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
-    <groupId>com.ctg.test</groupId>
-    <artifactId>springboot-file</artifactId>
+
+
+    <groupId>cn.huyingjie.grabticket</groupId>
+    <artifactId>fileOperator-api</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>springboot-file</name>
-    <description>springboot-file</description>
 
     <properties>
         <java.version>1.8</java.version>
